[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ploss"
version = "0.2.1"
description = "Packet Loss Detector and Debugger"
dependencies = []

[project.scripts]
ploss = "core.__main__:main"

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["output*"]